--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1295,6 +1295,7 @@
                         position:relative;
                         height:30px;
                         margin-top:25px;
+                        padding-right:50px;
                         .percenBom{
                             clear:both;
                             width:100%;
