--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -1,115 +1,340 @@
 ﻿.work-order-index{
-    .sub-router-list{
-        width: 100%;
-        overflow: hidden;
-        padding: 15px;
-        li{
-            width: 100%;
-            margin: 2px 0;
-            border: 1px solid #fafafa;
-            border-radius: 4px;
-            padding: 0 10px;
-            line-height:0;
-            font-size:0;
+    .search-orderOne{
+        clear:both;
+        display:block;
+        border-bottom:1px solid #dcdee3;
+        dd{
+            float:left;
+            text-align:center;
+            line-height:1;
+            padding-right:46px;
+            font-family:'PingFang SC';
             cursor: pointer;
+            span{
+                clear:both;
+                display:block;
+                font-size:14px;
+                color:#808080;
+                padding:6px 0px;
+                line-height:23px;
+                position:relative;
+                b{font-weight:normal;display:inline-block;padding-left:5px;}
+            }
             &.active,&:hover{
-                border: 1px solid #BDDEFF;
-                background-color: #F6FBFF;
+                span{
+                    color:#2f88ff;
+                    &:after{
+                        content:'';
+                        position:absolute;
+                        left:0px;
+                        right:0px;
+                        bottom:-1px;
+                        border-bottom:2px solid #2f88ff;
+                    }
+                }
+            }
+        }
+        dt{
+            float: right;
+            color:#2440b3;
+            font-size:14px;
+            line-height:35px;
+            cursor: pointer;
+            i{
+                font-size: 20px;
+                margin-right: 3px;
+                vertical-align: top;
+                color: #2440b3;
             }
             span{
-                color: $menuActiveText;
-            }
-            b{
-                font-weight: bold;
-                color: #f73a3e;
-                margin-left: 5px;
-            }
-            span,b{
-                display: inline-block;
-                height: 28px;
-                line-height: 28px;
-                vertical-align: top;
-                font-size: 12px;
+                border-bottom: 1px solid #2440b3;
+                line-height: 21px;
             }
         }
     }
-    .search-wrap{
-        .item-search{
-            float:left;
-            padding: 5px;
+    .search-orderTwo{
+        padding-top:10px;
+        &>span{
+            font-size:13px;
+            color:#999999;
+            margin-top:5px;
+            line-height:25px;
         }
-        .date-range{
-            width:100%;
+        ul{
+            li{
+                float:left;
+                background:#eff4f8;
+                margin-top:5px;
+                border-radius:4px;
+                line-height:25px;
+                padding:0px 20px;
+                font-size:13px;
+                color:#4c4c4c;
+                margin-left:10px;
+                cursor:pointer;
+                b{font-weight:normal;display:inline-block;padding-left:5px;}
+                &.active{
+                    background:#2f88ff;
+                    color:#fff;
+                }
+                &:hover{
+                    background:#2f88ff;
+                    color:#fff;
+                }
+            }
         }
-        .select-panel{
-            width: 150px;
+    }
+    .search-orderThree{
+        clear:both;
+        padding-top:15px;
+        .search-orderThree-Tag{
+            li{
+                float:left;
+                margin-right:10px;
+                border-radius:2px;
+                line-height:24px;
+                padding:0px 5px;
+                background:#eff4f8;
+                font-size:13px;
+                color:#4c4c4c;
+                cursor: pointer;
+                position: relative;                
+                border-radius: 4px;
+                .svg-i{
+                  float: left;
+                  position: initial;
+                  width: 14px;
+                  opacity: 1;
+                  margin-right: 3px;
+                  padding-top: 1px;
+                  svg{
+                    font-size: 14px;
+                  }
+                }
+                .workBg{
+                  position: absolute;
+                  left:0px;
+                  top:0px;
+                  width:100%;
+                  height:100%;
+                  display: block;
+                  opacity: 0.15;
+                }
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 0px;
+                    top: 0px;
+                    height: 100%;
+                    width: 100%;
+                    z-index: 2;
+                    border-width: 1px;
+                    border-style: solid;
+                    border-color: inherit;
+                    opacity:0;
+                    transition: all 0.5s;
+                }
+                &.active,&:hover{
+                    &:after {
+                        opacity: 1;
+                    }
+                }
+            }
         }
+        .search-wrap{
+            .item-search{
+                float:left;
+                padding:0px 5px;
+                .el-input--small .el-input__inner {
+                    height:25px;
+                    line-height:23px;
+                }
+                .el-input--small .el-input__icon {
+                    line-height:25px;
+                }
+                .el-range-editor--small.el-input__inner{height:25px;padding:3px 10px;}
+                .el-range-editor--small .el-range__icon{line-height:18px;}
+                .el-range-editor--small .el-range-separator {line-height:17px;}
+                .resetBtn{
+                    clear: both;
+                    display: block;
+                    line-height:25px;
+                    color:#2e88ff;
+                    font-size:13px;
+                    cursor: pointer;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+            .date-range{width:100%;box-sizing:border-box;vertical-align:top;}
+            .select-panel{
+                width:150px;
+            }
+        }
+    }
+    .clues-info{
+        margin-top:15px;
     }
     .order-title{
-        cursor: pointer;
-        transition: all .3s;
-        &:hover{
-            padding-left: 5px;
+        span{
+            cursor:pointer;
+            transition:all .3s;
+            &:hover{
+                color:#f9a500;
+                text-decoration: underline;
+            }
+        }
+        i{
+            cursor:pointer;
+            display: inline-block;
+            margin-left:5px;
+            color:#f9a500;
+            svg{
+                font-size:14px;
+            }
         }
         &.time-out{
-            color: red;
+            color:red;
             strong{
-                background-color: red;
-                color: #fff;
-                font-weight: normal;
-                border-radius: 4px;
-                padding: 0 6px;
-                height: 20px;
-                line-height: 20px;
-                display: inline-block;
-                margin-left: 5px;
+                background-color:red;
+                color:#fff;
+                font-weight:normal;
+                border-radius:4px;
+                padding:0 6px;
+                height:20px;
+                line-height:20px;
+                display:inline-block;
+                margin-left:5px;
             }
         }
     }
     .table-tag{
-        span{
+        &.starts{
+            .svg-i {
+                display: inline-block;
+                width: 15px;
+                height:15px;
+                border-radius:10px;
+                border: 1px solid #b9c0c1;
+                text-align: center;
+                line-height:10px;
+                margin-right: 5px;
+                svg{font-size:9px;}
+            }
         }
         .color1{
-            color: #94c2ff;
+            color:#94c2ff;
+            .svg-i {border-color:#94c2ff;}
         }
         .color2{
-            color: #ffa415;
+            color:#ffa415;
+            .svg-i {border-color:#ffa415;}
         }
         .color3{
-            color: #bdbdbd;
+            color:#bdbdbd;
+            .svg-i {border-color:#bdbdbd;}
         }
         .color4{
-            color: #94c2ff;
+            color:#94c2ff;
+            .svg-i {border-color:#94c2ff;}
         }
         .color5{
-            color: #61d071;
+            color:#61d071;
+            .svg-i {border-color:#61d071;}
         }
         .color6{
-            color: #ee3c40;
+            color:#ee3c40;
+            .svg-i {border-color:#ee3c40;}
         }
         .color7{
-            color: #94c2ff;
+            color:#94c2ff;
+            .svg-i {border-color:#94c2ff;}
         }
         .el-button{
             padding:0px;
             border:0px;
-            white-space: normal;
+            white-space:normal;
             cursor:default;
-            text-align: left;
-            background: none;
+            text-align:left;
+            background:none;
             &:hover{
-                background: none;
+                background:none;
+            }
+        }
+    }
+    .el-table td.el-table__cell .table-button{white-space: nowrap;}
+    .el-table__fixed-header-wrapper{
+        z-index: 4!important;
+    }
+    .el-table .el-table__cell.workIconleaf.is-hidden > *{visibility: visible;}
+    .el-table__header-wrapper{overflow: initial!important;}
+    .workIconleaf{
+        padding:0px;
+        overflow: initial!important;
+        line-height: 35px;
+        .el-table__column-filter-trigger{
+            float: right;
+            width: 55px;
+            height: 55px;
+            display: block;
+            text-align: center;
+            line-height: 55px;
+            margin: -10px -10px -10px 0px;
+            border-left: 1px solid #f3f6f9;
+            position: relative;
+            .el-icon-arrow-down{
+                clear: both;
+                display: block;
+                width: 100%;
+                height: 100%;
+                cursor: pointer;
+                background-image:url('../assets/workIcon.png');
+                background-size: 15px 12px;
+                background-position: center center;
+                background-repeat: no-repeat;
+                &:before{display: none;}
+            }
+        }
+    }
+    .table-input{
+        .el-input{
+            clear: both;
+            display: block;
+            width:70px;
+            margin: 0 auto;
+        }
+        p{
+            display: flex;
+            align-items: center;
+            padding:0 10px;
+            span{
+                float: left;
+                width: 90px;
+                height: 7px;
+                border-radius: 4px;
+                background: #eeeeee;
+                position: relative;
+                overflow: hidden;
+                margin-right: 10px;
+                i{
+                    position: absolute;
+                    left:0px;
+                    top:0px;
+                    height:100%;
+                    background:#73d897;
+                }
             }
         }
     }
 }
 .timenewline{
-    clear: both;
-    display: block;
-    line-height: 1.3;
+    clear:both;
+    display:block;
+    line-height:1.3;
     span{
-        clear: both;
-        display: block;
+        clear:both;
+        display:block;
         color:#bbb;
     }
 }
