--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -2089,6 +2089,11 @@
     border-right:1px solid #efefef;
     border-left:1px solid #efefef;
     background:#fafafa;
+    position: relative;
+    &.Shrink{
+        width:0px;
+        border-right:0px solid #efefef;
+    }
     .el-scrollbar {
         height: 100%;
         .el-scrollbar__wrap{
@@ -2158,6 +2163,39 @@
             }
         }
     }
+    .homeLeftArrow{
+        position: absolute;
+        top: 50%;
+        right: -10px;
+        width: 0px;
+        height: 45px;
+        border-top: 6px solid transparent;
+        border-bottom: 6px solid transparent;
+        border-left: 10px solid #e2e3e8;
+        border-right: 0px solid transparent;
+        margin-top: -23px;
+        transition: all 0.5s;
+        cursor: pointer;
+        i{
+            position: absolute;
+            left: -9px;
+            top: 50%;
+            font-size: 16px;
+            line-height: 1;
+            display: block;
+            border-top: 6px solid transparent;
+            border-bottom: 6px solid transparent;
+            border-left: 0px solid transparent;
+            border-right: 6px solid #fff;
+            margin-top: -6px;
+        }
+        &:hover{
+            border-left-color:#1d212a;
+        }
+    }
+}
+.homeMain{
+    padding:15px;
 }
 @media (max-width:1600px){
     .home-index{
