--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -2090,6 +2090,7 @@
     border-left:1px solid #efefef;
     background:#fafafa;
     position: relative;
+    z-index:1;
     &.Shrink{
         width:0px;
         border-right:0px solid #efefef;
@@ -2195,7 +2196,6 @@
     }
 }
 .homeMain{
-    padding:15px;
 }
 @media (max-width:1600px){
     .home-index{
