--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,6 +29,7 @@
 @import './-works.scss';
 @import './-workOrder.scss';
 @import './-dict.scss';
+@import './-teamMember.scss';
 .clear{
   clear:both;
   display:block;  
