--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,6 +30,9 @@
 @import './-workOrder.scss';
 @import './-dict.scss';
 @import './-teamMember.scss';
+@import './-DepIndex.scss';
+@import './-MemberCompare.scss';
+@import './-singleperson.scss';
 .clear{
   clear:both;
   display:block;  
