--- a/src/styles/-resize.scss
+++ b/src/styles/-resize.scss
@@ -16,6 +16,9 @@ html,body,#app,#app > .el-container{
     overflow: hidden;
     background-color: #f6f7fa;
     font-family:  -apple-system,BlinkMacSystemFont,Helvetica Neue,Tahoma,PingFang SC,Microsoft Yahei,Arial,Hiragino Sans GB,sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
 table{
     border-collapse: collapse;
