--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -674,6 +674,11 @@
           border-left: 1px solid #e5ecf2;
         }
     }
+    .endepDay{
+        li{
+            width: 25%;
+        }
+    }
 }
 
 .rowMonthDeal{
@@ -954,7 +959,7 @@
                     font-size:12px;
                     color:#999999;
                     line-height:26px;
-                    width:74px;
+                    width:95px;
                     text-align:left;
                 }
                 .delCircle{
