--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -1201,3 +1201,17 @@
         
     }
 }
+
+@media screen and(max-width:1600px){
+    .target-part{
+        .target_left{
+            width: 100%;
+            padding-right: 0;
+        }
+        .target_right{
+            width: 100%;
+            padding-left: 0;
+            margin-top: 6px;
+        }
+    }
+}
